--- a/app/src/main/res/layout/activity_music_player.xml
+++ b/app/src/main/res/layout/activity_music_player.xml
@@ -19,7 +19,18 @@
             android:layout_width="@dimen/mp.music.album.size"
             android:layout_height="@dimen/mp.music.album.size"
             android:layout_centerInParent="true"
+            android:visibility="gone"
             android:src="@drawable/default_record_album" />
+
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_playlist"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </android.support.v7.widget.RecyclerView>
+
+
     </RelativeLayout>
 
     <TextView
